--- a/src/app/pages/escapingValue/escapingValue.component.html
+++ b/src/app/pages/escapingValue/escapingValue.component.html
@@ -2,7 +2,7 @@
 <div>
   <h2>Description</h2>
   <div>
-    This page puts the value of the query parameter ("xss") into the value attribute of a value tag.
+    This page puts the escaped value of the query parameter ("xss") into the value attribute of a value tag.
     It gets escaped by angular.
   </div>
   <div class="vulnerability-info-container">
