--- a/src/app/pages/escapingTag/escapingTag.component.html
+++ b/src/app/pages/escapingTag/escapingTag.component.html
@@ -2,7 +2,7 @@
 <div>
   <h2>Description</h2>
   <div>
-    This page puts the value of the query parameter ("xss") into a div tag.
+    This page puts the escaped value of the query parameter ("xss") into a div tag.
     It gets escaped by angular.
   </div>
   <div class="vulnerability-info-container">
