--- a/src/app/pages/sanitizedHref/sanitizedHref.component.html
+++ b/src/app/pages/sanitizedHref/sanitizedHref.component.html
@@ -1,8 +1,8 @@
-<h1>Simple Tag</h1>
+<h1>Sanitized Href</h1>
 <div>
   <h2>Description</h2>
   <div>
-    This page puts sanitized value of the query parameter ("xss") in the herf attribute of an a tag.
+    This page puts sanitized value of the query parameter ("xss") in the href attribute of an a tag.
     This is done with setting innerHTML ([innerHTML]="xss"). It gets sanitized by angular.
     <div class="vulnerability-info-container">
       <label>Has XSS vulnerability:</label>
