--- a/src/app/pages/simpleValue/simpleValue.component.html
+++ b/src/app/pages/simpleValue/simpleValue.component.html
@@ -1,8 +1,8 @@
-<h1>Simple Tag</h1>
+<h1>Simple Value</h1>
 <div>
   <h2>Description</h2>
   <div>
-    This page puts the value of the query parameter ("xss") into the value attribute of a value tag.
+    This page puts the value of the query parameter ("xss") into the value attribute of a input tag.
     This is done with setting innerHTML ([innerHTML]="xss") and actively disabled sanitizing.
     This is not considered best practice.
     <div class="vulnerability-info-container">
