renamed OnLoad to Onload

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -47,7 +47,7 @@
       <a href="/escapingValue?xss=234">Value</a>
     </div>
     <div>
-      <a href="/escapingOnLoad?xss=234">Event Handler</a>
+      <a href="/escapingOnload?xss=234">Event Handler</a>
     </div>
   </div>
 </div>
